2015-10-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * lib/magic: add file extensions, one media type, and a better comment
   * khmer/__init__.py: Replace an errant 'Presence table' with 'node graph'

2015-09-28  Lisa Cohen  <ljcohen@ucdavis.edu>

   * tests/test_read_handling.py: created new file with interleave-reads,
   split-paired-reads, and extract-paired-reads functions
   * tests/test_scripts.py: removed functions mentioned above

2015-09-19  Titus Brown  <titus@idyll.org>

   * scripts/filter-abund.py: fixed bug with -o and --gzip used together.
   * tests/test_scripts.py: added test for fixed bug.
   * sandbox/count-kmers.py: added executable bit.

2015-09-17  Camille Scott  <camille.scott.w@gmail.com>

   * scripts/interleave-reads.py: Added --no-reformat flag
   to disable format checking and renaming of headers
   * tests/{test_scripts.py, test-data/paired.malformat*}: Tests
   and test data for --no-reformat flag.

2015-09-11  Russell Y. Neches  <ryneches@ucdavis.edu>

   * lib/hashbits.hh: added get_raw_tables to Hashbits
   * khmer/_khmer.cc: added get_raw_tables to Hashbits
   * tests/test_nodegraph.py: added test for Nodegraph.get_raw_tables

2015-09-11  Camille Scott  <camille.scott.w@gmail.com>

   * lib/hashbits.cc: Make hasbits::update_from() correctly update
   _occupied_bins.
   * lib/test_nodegraph.py: Test Nodegraph.n_occupied() after update.

2015-09-07  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * doc/roadmap.rst: Updated for 2.0 release.
   * README.rst: drop unstable badges; fix links
   * doc/index.rst: point at getting help guide

2015-09-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * tests/test_scripts.py: make the script version test more specific; double
   check that script in question is from the 'khmer' project based upon the
   second line of the file.

2015-09-04  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * tests/khmer_tst_utils.py: look in "EGG-INFO" for scripts before checking
   the PATH
